[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/QuestionArea.gd" type="Script" id=1]
[ext_resource path="res://bit_theme.tres" type="Theme" id=2]

[node name="QuestionArea" type="WindowDialog"]
visible = true
margin_left = 552.0
margin_top = 192.0
margin_right = 800.0
margin_bottom = 288.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -16.0
margin_top = -1.0
margin_right = 176.0
margin_bottom = 80.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 9.0
margin_right = 245.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "Kas vestled emaga?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="Panel"]
margin_left = 80.0
margin_top = 65.0
margin_right = 128.0
margin_bottom = 89.0
text = "JAH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Panel"]
margin_left = 152.0
margin_top = 65.0
margin_right = 200.0
margin_bottom = 89.0
text = "EI"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Panel/No" to="." method="_on_No_pressed"]
